# GD32F30x_cmake_example

./: .gitignore  CMakeLists.txt  GD32F30x_HD.svd  openocd_target.cfg
Examples/: CMakeLists.txt
Examples/ADC/: CMakeLists.txt
Examples/ADC/ADC0_ADC1_regular_parallel/: CMakeLists.txt
Firmware/: CMakeLists.txt
Firmware/CMSIS/: CMakeLists.txt
Firmware/GD32F30x_standard_peripheral/: CMakeLists.txt
Utilities/: CMakeLists.txt
cmake/: example_add_libs.cmake  example_set_name.cmake
